log
Sun Apr 24 22:42:42 HSP 2022: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
f6d4f15
Sun Apr 24 22:42:56 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
f4f2fec
Sun Apr 24 22:54:26 HSP 2022: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
7b2625d
Sun Apr 24 22:55:09 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c2c99ad
Sun Apr 24 22:57:57 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ebd33c6
Sun Apr 24 22:59:28 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
5e00573
Sun Apr 24 23:03:56 HSP 2022: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
ed8dafd
Sun Apr 24 23:06:22 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
00704d0
Sun Apr 24 23:08:27 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
84c09a1
Sun Apr 24 23:22:17 HSP 2022: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  12|6
total_score: 15/70
bf04d7e
Sun Apr 24 23:22:48 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
578901d
Sun Apr 24 23:25:09 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
797b502
Mon Apr 25 00:12:45 HSP 2022: 
 treemap.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  18|3
total_score: 40/70
4231b2f
Mon Apr 25 00:23:50 HSP 2022: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:166:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return ret;
            ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
8ffdc20
Mon Apr 25 00:24:06 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
a8af6c6
Mon Apr 25 00:33:20 HSP 2022: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
6496ed8
Mon Apr 25 00:34:11 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6929118
